--- a/frontend/index.html
+++ b/frontend/index.html
@@ -4,8 +4,11 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
- 
-    
+    <meta
+      name="chuyên trang đi chợ hộ"
+      content="sale168.com chuyên trang đi chợ hộ, các sản phẩm OCOP và thực phẩm sạch"
+    />
+
     <title>Đi chợ hộ - sale168.vn</title>
   </head>
   <body>
