--- a/frontend/index.html
+++ b/frontend/index.html
@@ -9,7 +9,7 @@
       content="sale168.com chuyên trang đi chợ hộ, các sản phẩm OCOP và thực phẩm sạch"
     />
 
-    <title>Chợ trực tuyến của người Việt - sale168.vn - </title>
+    <title>Chuyên trang đi chợ hộ - Chợ trực tuyến của người Việt - sale168.vn - </title>
   </head>
   <body>
     <div id="root"></div>
